Remove IFSA module + Remove JMS 1.0.2 support (#5996)