@@ -4,8 +4,6 @@ set -e
 # Append HeapDump and GC properties to existing JAVA_OPTS
 export JAVA_OPTS="$JAVA_OPTS \
 	-XX:HeapDumpPath=/usr/local/tomcat/logs \
-	-XX:+HeapDumpOnOutOfMemoryError \
-	-XX:+UnlockExperimentalVMOptions \
-	-XX:+UseZGC"
+	-XX:+HeapDumpOnOutOfMemoryError"
 
 exec "$@"
